<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bkgrnd"
    android:orientation="vertical">
    <ScrollView
        android:layout_weight="6"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <GridView
            android:id="@+id/storyGridview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:numColumns="auto_fit"
            android:columnWidth="200dp"
            android:verticalSpacing="1dp"
            android:horizontalSpacing="1dp"
            android:stretchMode="columnWidth"
            android:gravity="center">
        </GridView>
    </ScrollView>

    <LinearLayout
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:background="@color/barApp"
            android:textColor="@color/colorButtonText"
            android:text="@string/get_fav"
            android:id="@+id/get_fav2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
    <Button
        android:text="@string/main"
        android:id="@+id/main_page_story"
        android:textColor="@color/colorButtonText"
        android:background="@color/barApp"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
    <com.google.android.gms.ads.AdView
        android:background="@color/barApp"
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" >
    </com.google.android.gms.ads.AdView>
    </LinearLayout>
